changed font and fixed spacing

--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -1,13 +1,17 @@
 /* Reset default browser styles */
-body, h1, h2, h3, p, ul, li, form, input, textarea, button {
+body, h1, h2, h3, ul, li, form, input, textarea, button {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Gill Sans, sans-serif;
-    line-height: 32px;
-    &:not(:last-child)  {
-        margin-bottom: 30px;
-    }
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+
+  p {
+    line-height: 25px;  
+    margin: 15px 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-align: justify;
   }
 
   
